# kaldi-lattice-search

./: CMakeLists.txt
